name:          hathverse
version:       0.0.3
cabal-version: >= 1.8
build-type:    Simple

library
    hs-source-dirs: .
    exposed-modules:
          Hathverse.Db
        , Hathverse.View
        , Hathverse.View.Common
        , Hathverse.View.Homepage
        , Hathverse.View.Problem
        , Hathverse.Controller
        , Hathverse.Checker
    -- other-modules:
    build-depends:
          base
        , text
        , bytestring
        , transformers
        , mtl
        , lucid
        , persistent
        , persistent-template
        , persistent-postgresql
        , esqueleto
        , monad-logger
        , resourcet
        , resource-pool
        , directory
        , process
        , strict
        , aeson
        , async
    extensions:
      OverloadedStrings

executable hathverse
    hs-source-dirs: app
    main-is:        Main.hs
    ghc-options:    -Wall -threaded -O2 -rtsopts -with-rtsopts=-N
    extensions:     OverloadedStrings
    include-dirs:   static
    build-depends:
          base
        , text
        , mtl
        , Spock
        , hathverse
        , wai-middleware-static
        , wai-extra

source-repository head
    type:     git
    location: https://github.com/CNMDR3G/hathverse
